route/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-ca-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.org/client-max-body-size: 500m
    nginx.org/mergeable-ingress-type: minion
    nginx.org/proxy-connect-timeout: 60s
    nginx.org/proxy-read-timeout: 60s
  creationTimestamp: "2023-06-30T02:53:00Z"
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/version: 1.16.1
  name: ingress-monitoring
  namespace: kube-monitoring
spec:
  rules:
  - host: monitor.local.exelab.asia
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 8080
        path: /
        pathType: Prefix

  - host: alert.local.exelab.asia
    http:
      paths:
      - backend:
          service:
            name: alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix

  tls:
    - hosts:
        - monitor.local.exelab.asia
        - alert.local.exelab.asia
      secretName: monitor-tls
